@@ -1,6 +1,9 @@
 '''RUN THIS FILE'''
 
 from modules import tkmenus
+from modules import fileHandling
+
 
 #{"empno": 0, "email": "test", "role": "admin"}
-tkmenus.firstMenu()
+tkmenus.displayFile("accounts_user", "jdkhjaslfl")
+#tkmenus.updateAccount_user({"empno": 0, "email": "test", "role": "admin"})
