@@ -7,3 +7,4 @@
 
 18-08-2022
 +Sanitized empty fields
++Implemented account creation menu
